# GLFW-CMake-starter

./: .gitmodules  CMakeLists.txt  main.cpp
example/2.triangle2/: glad.cpp
example/3.mesh/: main.cpp
example/4.camera/: main.cpp  shader.h
example/5.texture/: camera.h  main.cpp  material.h  shader.h
example/assets/shader/: color_fs  color_vs  texture.vs  texture_fs
example/camera/: camera.h  color_fs  color_vs  main.cpp  mesh.h
example/mesh/: color_fs  color_vs  main.cpp  shader.h
example/texture/: main.cpp  shader.h
example/triangle/: main.cpp
example/triangle2/: main.cpp
glad/include/glad/: glad.h
